GNOME Bugzilla – Bug 757742
Fix up annotations in ghash.c
Last modified: 2015-11-08 12:35:08 UTC
There is a number of obsolete or missing annotations in ghash.c. The attached patches correct the annotations.
Created attachment 315059 [details] [review] ghash: Correctly annotate (nullable) and (out) parameters
Created attachment 315060 [details] [review] Return value of g_hash_table_get_{keys,values} is (transfer container)
Review of attachment 315059 [details] [review]: Looks good to me.
Review of attachment 315060 [details] [review]: Right.
Attachment 315059 [details] pushed as 42463b8 - ghash: Correctly annotate (nullable) and (out) parameters Attachment 315060 [details] pushed as 0a10d38 - Return value of g_hash_table_get_{keys,values} is (transfer container)