ghash: Correctly annotate (nullable) and (out) parameters

https://bugzilla.gnome.org/show_bug.cgi?id=757742